# simple-voice-assistant

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  WORK_PLAN.md  guidelines.md  pyproject.toml  simple assistant spec.md
.github/agents/: architecture-agent.agent.md  audio-agent.agent.md  configuration-agent.agent.md  documentation-agent.agent.md  intent-agent.agent.md  skill-agent.agent.md  stt-agent.agent.md  testing-agent.agent.md  tts-agent.agent.md  vad-recording-agent.agent.md  wake-word-agent.agent.md
.github/instructions/: shared.instructions.md
assistant_core/: __init__.py  fakes.py  interfaces.py  models.py
assistant_core/audio/: __init__.py  devices.py  microphone.py  sounds.py  speaker.py
assistant_core/config/: __init__.py  loader.py  schema.py
assistant_core/intent/: __init__.py  router.py
assistant_core/runtime/: __init__.py  event_bus.py  events.py  state_machine.py
assistant_core/skills/: __init__.py  builtins.py  executor.py  registry.py
assistant_core/stt/: __init__.py  engine.py
assistant_core/tts/: __init__.py  engine.py
assistant_core/vad/: __init__.py  detector.py  recording.py
assistant_core/wake/: __init__.py  detector.py
config/: default.toml  development.toml  reference-mini-pc.toml  reference-raspberry-pi4.toml
docs/: ARCHITECTURE_AND_WORKFLOW.md
tests/: conftest.py  test_smoke.py
tests/fixtures/: __init__.py  runtime.py
tests/unit/: test_fakes.py  test_fixtures.py  test_interfaces.py  test_models.py
tests/unit/audio/: __init__.py  test_devices.py  test_microphone.py  test_playback.py
tests/unit/config/: test_loader.py  test_schema.py
tests/unit/intent/: __init__.py  test_router.py
tests/unit/runtime/: test_event_bus_impl.py  test_events.py  test_state_machine.py
tests/unit/skills/: test_builtin_skills.py  test_executor.py  test_registry.py
tests/unit/stt/: test_engine.py  test_vosk.py
tests/unit/tts/: test_cache.py  test_engine.py  test_piper.py
tests/unit/vad/: test_detector.py  test_recording.py
tests/unit/wake/: test_detector.py
